--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/danleavitt0/devY",
   "dependencies": {
     "classnames": "^2.1.2",
+    "material-ui": "^0.11.1",
     "react": "^0.13.3",
     "react-redux": "^2.1.2",
+    "react-tap-event-plugin": "^0.1.7",
     "redux": "^3.0.0"
   },
   "devDependencies": {
